--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "gray-matter": "^4.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.6",
+    "sass": "^1.61.0",
     "typescript": "5.0.4"
+  },
+  "main": "index.js",
+  "license": "MIT",
+  "devDependencies": {
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2"
   }
 }
