pagetransitions thanks to max schmitt for the blog post

--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@barba/core": "^2.9.7",
+    "@barba/prefetch": "^2.1.10",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "@types/react-transition-group": "^4.4.5",
+    "barba.js": "^1.0.0",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.11.2",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.11.5",
+    "jsdom": "^21.1.1",
     "next": "13.3.0",
+    "next-page-transitions": "^1.0.0-beta.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
