--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.5",
     "jsdom": "^21.1.1",
+    "lottie-react-web": "^2.2.2",
     "next": "13.3.0",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "18.2.0",
