--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.11.2",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.5",
+    "highlight.js": "^11.7.0",
     "jsdom": "^21.1.1",
     "lottie-react-web": "^2.2.2",
     "next": "13.3.0",
@@ -30,6 +31,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
+    "rehype-highlight": "^6.0.0",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "sass": "^1.61.0",
     "typescript": "5.0.4"
   },
